--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <connection>scm:git:git://github.com/claremontqualitymanagement/TestAutomationFramework.git</connection>
         <developerConnection>scm:git://github.com/claremontqualitymanagement/TestAutomationFramework.git</developerConnection>
         <url>https://github.com/claremontqualitymanagement/TestAutomationFramework</url>
-        <tag>taf.javasupport-4.0.1</tag>
+        <tag>taf.eyesupport-4.0.1</tag>
     </scm>
 
     <dependencies>
