--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.claremontqualitymanagement</groupId>
     <artifactId>taf.eyesupport</artifactId>
-    <version>4.0.0</version>
+    <version>4.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <url>https://github.com/claremontqualitymanagement/TestAutomationFramework</url>
     <name>TAF - EyeAutomate support</name>
@@ -37,7 +37,7 @@
         <connection>scm:git:git://github.com/claremontqualitymanagement/TestAutomationFramework.git</connection>
         <developerConnection>scm:git://github.com/claremontqualitymanagement/TestAutomationFramework.git</developerConnection>
         <url>https://github.com/claremontqualitymanagement/TestAutomationFramework</url>
-        <tag>taf.eyesupport-4.0.0</tag>
+        <tag>taf.eyesupport-4.0.1</tag>
     </scm>
 
     <dependencies>
