--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.claremontqualitymanagement</groupId>
     <artifactId>taf.eyesupport</artifactId>
-    <version>4.0.1</version>
+    <version>4.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <url>https://github.com/claremontqualitymanagement/TestAutomationFramework</url>
     <name>TAF - EyeAutomate support</name>
